--- a/public/styles.css
+++ b/public/styles.css
@@ -22,10 +22,24 @@ canvas {
 
 #countdown {
   position: absolute;
-  top: 40%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 5rem;
+  font-size: 64px;
   font-weight: bold;
-  color: white;
+  color: black;
+  z-index: 10;
+}
+
+
+#gameContainer {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  height: 20px;
+}
+
+#gameCanvas {
+  border: 2px solid #000;
+  background-color: white;
 }
